More issues with z-index

--- a/src/routes/Navbar/Navbar.css
+++ b/src/routes/Navbar/Navbar.css
@@ -5,7 +5,7 @@ nav{
     top: 0;
     left: 0;
     width: 100vw;
-    z-index: 2; 
+    z-index: 3; 
     /* Changed to 2 because of some issue (Akshit)*/
 }
 .nav-wrapper{
